--- a/todo.yaml
+++ b/todo.yaml
@@ -2,10 +2,10 @@ apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
   name: poc-backstage-api
-  description: The books API
+  description: The todos API
   tags:
-    - books
-    - node-js-web-api
+    - todo
+    - dot-net-core-web-api
   links:
     - url: https://github.com/ahemadpirzada-cloud/Backstage-API-Templates
       title: GitHub Repo
@@ -18,95 +18,144 @@ metadata:
 spec:
   type: openapi
   lifecycle: experimental
-  owner: ahemad
+  owner: ahemadpirzada
   definition: |
     openapi: 3.0.1
     info:
       title: WebAPI
       version: '1.0'
     servers:
-      - url: http://localhost:8080
+      - url: http://localhost:3080
     paths:
-      /books:
-        get:
-          tags:
-            - books
-          responses:
-            '200':
-              description: Success
-        post:
-          tags:
-            - books
-          requestBody:
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/books'
-              text/json:
-                schema:
-                  $ref: '#/components/schemas/books'
-              application/*+json:
-                schema:
-                  $ref: '#/components/schemas/books'
-          responses:
-            '200':
-              description: Success
-      '/api/books/{id}':
-        get:
-          tags:
-            - Todo
-          parameters:
-            - name: id
-              in: path
-              required: true
-              schema:
-                type: string
-          responses:
-            '200':
-              description: Success
-        put:
-          tags:
-            - books
-          parameters:
-            - name: title
-              in: path
-              required: true
-              schema:
-                type: string
-          requestBody:
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/books'
-              text/json:
-                schema:
-                  $ref: '#/components/schemas/books'
-              application/*+json:
-                schema:
-                  $ref: '#/components/schemas/books'
-          responses:
-            '200':
-              description: Success
-        delete:
-          tags:
-            - Todo
-          parameters:
-            - name: id
-              in: path
-              required: true
-              schema:
-                type: string
-          responses:
-            '200':
-              description: Success
-    components:
-      schemas:
-        Todo:
+  "/todos":
+    get:
+      summary: Get all the tasks
+      description: Get all the tasks
+      produces:
+      - application/json
+      parameters: []
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/todosResponse"
+        '400':
+          description: Invalid status value
+          schema:
+            "$ref": "#/definitions/InvalidResponse"
+  "/todo":
+    post:
+      summary: Save the task
+      description: Save the task
+      produces:
+      - application/json
+      consumes:
+      - application/json
+      parameters:
+      - in: body
+        name: body
+        description: task object
+        required: true
+        schema:
           type: object
           properties:
-            title:
-              type: string
-              nullable:true
-            id:
-              type: integer
-              format: int32
+            task:
+              type: object
+              "$ref": "#/definitions/Task"
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/todosResponse"
+        '400':
+          description: Invalid status value
+          schema:
+            "$ref": "#/definitions/InvalidResponse"
+  "/todos/{id}":
+    put:
+      summary: Update the tasks
+      description: Update the tasks
+      produces:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        description: task id that needs to be deleted
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: task object
+        required: true
+        schema:
+          type: object
+          properties:
+            task:
+              type: object
+              "$ref": "#/definitions/Task"
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/todosResponse"
+        '400':
+          description: Invalid status value
+          schema:
+            "$ref": "#/definitions/InvalidResponse"
+  "/todo/{id}":
+    delete:
+      summary: Delete the task
+      description: Delete the task
+      produces:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        description: task id that needs to be deleted
+        required: true
+        type: string
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/todosResponse"
+        '400':
+          description: Invalid status value
+          schema:
+            "$ref": "#/definitions/InvalidResponse"
+definitions:
+  todosResponse:
+    type: object
+    properties:
+      id:
+        type: integer
+      task:
+        type: string
+      assignee:
+        type: string
+      status:
+        type: string
+  Task:
+    type: object
+    properties:
+      task:
+        type: string
+      assignee:
+        type: string
+      status:
+        type: string
+  InvalidResponse:
+    type: object
+    properties:
+      statusCode:
+        type: string
+      message:
+        type: string
