--- a/todo.yaml
+++ b/todo.yaml
@@ -1,178 +1,133 @@
---- 
 apiVersion: backstage.io/v1alpha1
-definitions: 
-  InvalidResponse: 
-    properties: 
-      message: 
-        type: string
-      statusCode: 
-        type: string
-    type: object
-  Task: 
-    properties: 
-      assignee: 
-        type: string
-      status: 
-        type: string
-      task: 
-        type: string
-    type: object
-  todosResponse: 
-    properties: 
-      assignee: 
-        type: string
-      id: 
-        type: integer
-      status: 
-        type: string
-      task: 
-        type: string
-    type: object
 kind: API
-metadata: 
-  annotations: 
-    backstage.io/techdocs-ref: "dir:."
-  description: "The todos API"
-  links: 
-    - 
-      icon: github
-      title: "GitHub Repo"
-      url: "https://github.com/ahemadpirzada-cloud/Backstage-API-Templates"
-    - 
-      icon: code
-      title: "API Spec"
-      url: "https://github.com/ahemadpirzada-cloud/Backstage-API-Templates/blob/main/todo.yaml"
+metadata:
   name: poc-backstage-api
-  tags: 
+  description: The todos API
+  tags:
     - todo
     - dot-net-core-web-api
-spec: 
-  ? "/todo/{id}"
-  : 
-    delete: 
-      description: "Delete the task"
-      parameters: 
-        - 
-          description: "task id that needs to be deleted"
-          in: path
-          name: id
-          required: true
-          type: string
-      produces: 
-        - application/json
-      responses: 
-        ? "200"
-        : 
-          description: "successful operation"
-          schema: 
-            items: 
-              $ref: "#/definitions/todosResponse"
-            type: array
-        ? "400"
-        : 
-          description: "Invalid status value"
-          schema: 
-            $ref: "#/definitions/InvalidResponse"
-      summary: "Delete the task"
-  /todos: 
-    /todo: ~
-    get: 
-      description: "Get all the tasks"
-      parameters: []
-      produces: 
-        - application/json
-      responses: 
-        ? "200"
-        : 
-          description: "successful operation"
-          schema: 
-            items: 
-              $ref: "#/definitions/todosResponse"
-            type: array
-        ? "400"
-        : 
-          description: "Invalid status value"
-          schema: 
-            $ref: "#/definitions/InvalidResponse"
-      summary: "Get all the tasks"
-    post: 
-      consumes: 
-        - application/json
-      description: "Save the task"
-      parameters: 
-        - 
-          description: "task object"
-          in: body
-          name: body
-          required: true
-          schema: 
-            properties: 
-              task: 
-                $ref: "#/definitions/Task"
-                type: object
-            type: object
-      produces: 
-        - application/json
-      responses: 
-        ? "200"
-        : 
-          description: "successful operation"
-          schema: 
-            items: 
-              $ref: "#/definitions/todosResponse"
-            type: array
-        ? "400"
-        : 
-          description: "Invalid status value"
-          schema: 
-            $ref: "#/definitions/InvalidResponse"
-      summary: "Save the task"
-  ? "/todos/{id}"
-  : 
-    put: 
-      description: "Update the tasks"
-      parameters: 
-        - 
-          description: "task id that needs to be deleted"
-          in: path
-          name: id
-          required: true
-          type: string
-        - 
-          description: "task object"
-          in: body
-          name: body
-          required: true
-          schema: 
-            properties: 
-              task: 
-                $ref: "#/definitions/Task"
-                type: object
-            type: object
-      produces: 
-        - application/json
-      responses: 
-        ? "200"
-        : 
-          description: "successful operation"
-          schema: 
-            items: 
-              $ref: "#/definitions/todosResponse"
-            type: array
-        ? "400"
-        : 
-          description: "Invalid status value"
-          schema: 
-            $ref: "#/definitions/InvalidResponse"
-      summary: "Update the tasks"
-  definition: |
-      openapi: 3.0.1
-      info:
-        title: WebAPI
-        version: '1.0'
-      servers:
-        - url: http://localhost:3080
-      paths:
+  links:
+    - url: https://github.com/ahemadpirzada-cloud/Backstage-API-Templates
+      title: GitHub Repo
+      icon: github
+    - url: https://github.com/ahemadpirzada-cloud/Backstage-API-Templates/blob/main/todo.yaml
+      title: API Spec
+      icon: code
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+spec:
+  type: openapi
   lifecycle: experimental
   owner: ahemadpirzada
-  type: openapi
+  definition: |
+    openapi: 3.0.1
+    info:
+      title: WebAPI
+      version: '1.0'
+    servers:
+      - url: http://localhost:3080
+    paths:
+  "/todos":
+    get:
+      summary: Get all the tasks
+      description: Get all the tasks
+      produces:
+      - application/json
+      parameters: []
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/todosResponse"
+        '400':
+          description: Invalid status value
+          schema:
+            "$ref": "#/definitions/InvalidResponse"
+    "/todo":
+    post:
+      summary: Save the task
+      description: Save the task
+      produces:
+      - application/json
+      consumes:
+      - application/json
+      parameters:
+      - in: body
+        name: body
+        description: task object
+        required: true
+        schema:
+          type: object
+          properties:
+            task:
+              type: object
+              "$ref": "#/definitions/Task"
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/todosResponse"
+        '400':
+          description: Invalid status value
+          schema:
+            "$ref": "#/definitions/InvalidResponse"
+  "/todos/{id}":
+    put:
+      summary: Update the tasks
+      description: Update the tasks
+      produces:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        description: task id that needs to be deleted
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: task object
+        required: true
+        schema:
+          type: object
+          properties:
+            task:
+              type: object
+              "$ref": "#/definitions/Task"
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/todosResponse"
+        '400':
+          description: Invalid status value
+          schema:
+            "$ref": "#/definitions/InvalidResponse"
+  "/todo/{id}":
+    delete:
+      summary: Delete the task
+      description: Delete the task
+      produces:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        description: task id that needs to be deleted
+        required: true
+        type: string
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/todosResponse"
+        '400':
+          description: Invalid status value
+          schema:
+            "$ref": "#/definitions/InvalidResponse"
