--- a/todo.yaml
+++ b/todo.yaml
@@ -5,7 +5,7 @@ metadata:
   description: The todos API
   tags:
     - todo
-    - dot-net-core-web-api
+    - node-js-api
   links:
     - url: https://github.com/ahemadpirzada-cloud/Backstage-API-Templates
       title: GitHub Repo
@@ -18,7 +18,7 @@ metadata:
 spec:
   type: openapi
   lifecycle: experimental
-  owner: ahemadpirzada
+  owner: ahemad
   definition: |
     openapi: 3.0.1
     info:
@@ -26,13 +26,14 @@ spec:
       version: '1.0'
     servers:
       - url: http://localhost:3080
-    paths:
-  "/todos":
+basePath: /api
+paths:
+  /todos:
     get:
       summary: Get all the tasks
       description: Get all the tasks
       produces:
-      - application/json
+        - application/json
       parameters: []
       responses:
         '200':
@@ -40,94 +41,122 @@ spec:
           schema:
             type: array
             items:
-              "$ref": "#/definitions/todosResponse"
+              $ref: '#/definitions/todosResponse'
         '400':
           description: Invalid status value
           schema:
-            "$ref": "#/definitions/InvalidResponse"
-    "/todo":
+            $ref: '#/definitions/InvalidResponse'
+  /todo:
     post:
       summary: Save the task
       description: Save the task
       produces:
-      - application/json
+        - application/json
       consumes:
-      - application/json
+        - application/json
       parameters:
-      - in: body
-        name: body
-        description: task object
-        required: true
-        schema:
-          type: object
-          properties:
-            task:
-              type: object
-              "$ref": "#/definitions/Task"
+        - in: body
+          name: body
+          description: task object
+          required: true
+          schema:
+            type: object
+            properties:
+              task:
+                type: object
+                $ref: '#/definitions/Task'
       responses:
         '200':
           description: successful operation
           schema:
             type: array
             items:
-              "$ref": "#/definitions/todosResponse"
+              $ref: '#/definitions/todosResponse'
         '400':
           description: Invalid status value
           schema:
-            "$ref": "#/definitions/InvalidResponse"
-  "/todos/{id}":
+            $ref: '#/definitions/InvalidResponse'
+  /todos/{id}:
     put:
       summary: Update the tasks
       description: Update the tasks
       produces:
-      - application/json
+        - application/json
       parameters:
-      - name: id
-        in: path
-        description: task id that needs to be deleted
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: task object
-        required: true
-        schema:
-          type: object
-          properties:
-            task:
-              type: object
-              "$ref": "#/definitions/Task"
+        - name: id
+          in: path
+          description: task id that needs to be deleted
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: task object
+          required: true
+          schema:
+            type: object
+            properties:
+              task:
+                type: object
+                $ref: '#/definitions/Task'
       responses:
         '200':
           description: successful operation
           schema:
             type: array
             items:
-              "$ref": "#/definitions/todosResponse"
+              $ref: '#/definitions/todosResponse'
         '400':
           description: Invalid status value
           schema:
-            "$ref": "#/definitions/InvalidResponse"
-  "/todo/{id}":
+            $ref: '#/definitions/InvalidResponse'
+  /todo/{id}:
     delete:
       summary: Delete the task
       description: Delete the task
       produces:
-      - application/json
+        - application/json
       parameters:
-      - name: id
-        in: path
-        description: task id that needs to be deleted
-        required: true
-        type: string
+        - name: id
+          in: path
+          description: task id that needs to be deleted
+          required: true
+          type: string
       responses:
         '200':
           description: successful operation
           schema:
             type: array
             items:
-              "$ref": "#/definitions/todosResponse"
+              $ref: '#/definitions/todosResponse'
         '400':
           description: Invalid status value
           schema:
-            "$ref": "#/definitions/InvalidResponse"
+            $ref: '#/definitions/InvalidResponse'
+definitions:
+  todosResponse:
+    type: object
+    properties:
+      id:
+        type: integer
+      task:
+        type: string
+      assignee:
+        type: string
+      status:
+        type: string
+  Task:
+    type: object
+    properties:
+      task:
+        type: string
+      assignee:
+        type: string
+      status:
+        type: string
+  InvalidResponse:
+    type: object
+    properties:
+      statusCode:
+        type: string
+      message:
+        type: string
