--- a/todo.yaml
+++ b/todo.yaml
@@ -4,7 +4,7 @@ metadata:
   name: poc-backstage-api
   description: The todos API
   tags:
-    - todo
+    - book
     - node-js-api
   links:
     - url: https://github.com/ahemadpirzada-cloud/Backstage-API-Templates
@@ -18,119 +18,100 @@ metadata:
 spec:
   type: openapi
   lifecycle: experimental
-  owner: ahemad
+  owner: ahemadpirzada
   definition: |
     openapi: 3.0.1
     info:
       title: WebAPI
       version: '1.0'
     servers:
-      - url: http://localhost:3080
-basePath: /api
-paths:
-  /todos:
-    get:
-      summary: Get all the tasks
-      description: Get all the tasks
-      produces:
-        - application/json
-      parameters: []
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/todosResponse'
-        '400':
-          description: Invalid status value
-          schema:
-            $ref: '#/definitions/InvalidResponse'
-  /todo:
-    post:
-      summary: Save the task
-      description: Save the task
-      produces:
-        - application/json
-      consumes:
-        - application/json
-      parameters:
-        - in: body
-          name: body
-          description: task object
-          required: true
-          schema:
-            type: object
-            properties:
-              task:
-                type: object
-                $ref: '#/definitions/Task'
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/todosResponse'
-        '400':
-          description: Invalid status value
-          schema:
-            $ref: '#/definitions/InvalidResponse'
-  /todos/{id}:
-    put:
-      summary: Update the tasks
-      description: Update the tasks
-      produces:
-        - application/json
-      parameters:
-        - name: id
-          in: path
-          description: task id that needs to be deleted
-          required: true
-          type: string
-        - in: body
-          name: body
-          description: task object
-          required: true
-          schema:
-            type: object
-            properties:
-              task:
-                type: object
-                $ref: '#/definitions/Task'
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/todosResponse'
-        '400':
-          description: Invalid status value
-          schema:
-            $ref: '#/definitions/InvalidResponse'
-  /todo/{id}:
-    delete:
-      summary: Delete the task
-      description: Delete the task
-      produces:
-        - application/json
-      parameters:
-        - name: id
-          in: path
-          description: task id that needs to be deleted
-          required: true
-          type: string
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/todosResponse'
-        '400':
-          description: Invalid status value
-          schema:
-            $ref: '#/definitions/InvalidResponse'
-
-  
+      - url: http://localhost:8080
+    basePath: /api
+    paths:
+      /books:
+        get:
+          tags:
+            - book
+          responses:
+            '200':
+              description: Success
+        post:
+          tags:
+            - book
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Book'
+              text/json:
+                schema:
+                  $ref: '#/components/schemas/Book'
+              application/*+json:
+                schema:
+                  $ref: '#/components/schemas/Book'
+          responses:
+            '200':
+              description: Success
+      '/books/{id}':
+        get:
+          tags:
+            - Book
+          parameters:
+            - name: id
+              in: path
+              required: true
+              schema:
+                type: integer
+                format: int32
+          responses:
+            '200':
+              description: Success
+        put:
+          tags:
+            - Book
+          parameters:
+            - name: id
+              in: path
+              required: true
+              schema:
+                type: integer
+                format: int32
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Book'
+              text/json:
+                schema:
+                  $ref: '#/components/schemas/Book'
+              application/*+json:
+                schema:
+                  $ref: '#/components/schemas/Book'
+          responses:
+            '200':
+              description: Success
+        delete:
+          tags:
+            - Todo
+          parameters:
+            - name: id
+              in: path
+              required: true
+              schema:
+                type: integer
+                format: int32
+          responses:
+            '200':
+              description: Success
+    components:
+      schemas:
+        Book:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int32
+            title:
+              type: string
+              nullable: true
+          additionalProperties: false
