--- a/demo.yaml
+++ b/demo.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: poc-backstage-api-v2
+  name: poc-server-api-v5
   description: The todos API 34
   tags:
     - todo
