--- a/post.yaml
+++ b/post.yaml
@@ -61,19 +61,19 @@ spec:
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "token": {
-                                        "token": "string"
-                                    },
                                     "id": {
-                                        "id": "string"
+                                        "id": "integer"
                                     },
-                                    "product_variant_id": {
-                                        "product_variant_id": "string"
+                                    "name": {
+                                        "name": "string"
+                                    },
+                                    "isComplete": {
+                                        "isComplete": "boolean"
                                     }
                                 }, "required": [
-                                    "token",
                                     "id",
-                                    "product_variant_id"
+                                    "name",
+                                    "isComplete"
                                 ]
                             }
                         }
