--- a/lastcheck.yaml
+++ b/lastcheck.yaml
@@ -49,6 +49,7 @@ spec:
                 description: Success
           post:
             requestBody:
+              title: A Slack message
               required: true
               content:
                 application/x-www-form-urlencoded:
