--- a/header.yaml
+++ b/header.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: fund analysis
+  name: fund_analysis
   description: The post
   tags:
     - node
