--- a/authorize.yaml
+++ b/authorize.yaml
@@ -40,6 +40,7 @@ spec:
            - https://www.vanguard.com
     servers:
       - url: https://webapi20220913163904.azurewebsites.net/
+        title: Choose Servers
     paths:
       /todoitems:
         get:
